--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vm75/sanscript",
+  "name": "sanscriptjs",
   "version": "0.0.1",
   "description": "Sanscript is a transliteration library for Indian languages. It supports the most popular Indian scripts and several different romanization schemes. Although Sanscript focuses on Sanskrit transliteration, it has partial support for other languages and is easy to extend.",
   "main": "sanscript.js",
